--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="GenaralBusiness" />
     <meta name="description" content="GBS (GenaralBusiness)" />
     <meta name="robots" content="noindex,nofollow" />
-    <link rel="icon" type="image/x-icon" href="/image/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./image/logo.png" />
     <title>GBS</title>
-    <link rel="stylesheet" href="/style/index.css" />
+    <link rel="stylesheet" href="./style/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +28,7 @@
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
-          ><img src="/image/logo.png" width="70"
+          ><img src="./image/logo.png" width="70"
         /></a>
         <button
           class="navbar-toggler"
@@ -47,7 +47,7 @@
         >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">หน้าแรก</a>
+              <a class="nav-link" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -98,7 +98,7 @@
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
-          ><img src="/image/logo.png" width="100"
+          ><img src="./image/logo.png" width="100"
         /></a>
         <button
           class="navbar-toggler"
@@ -117,7 +117,7 @@
         >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item dropdown">
-              <a class="nav-link dropbtn" href="/index.html">หน้าแรก</a>
+              <a class="nav-link dropbtn" href="./index.html">หน้าแรก</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropbtn" href="#">โปรดักซ์</a>
@@ -146,7 +146,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <img src="/image/product1.jpg" class="image image-fluid" />
+            <img src="./image/product1.jpg" class="image image-fluid" />
           </div>
           <div class="col">
             <p class="text-center">แนะนำโปรดักซ์</p>
@@ -167,7 +167,7 @@
                   <div class="col">
                     <img
                       class="image image-fluid"
-                      src="/image/Products/328696895_1672221033233396_4146944362792453051_n.jpg"
+                      src="./image/Products/328696895_1672221033233396_4146944362792453051_n.jpg"
                       width="200"
                       alt="ตาข่ายกันนก ชนิด HDPE สีดำ"
                     />
@@ -185,7 +185,7 @@
                   <div class="col">
                     <img
                       class="image image-fluid"
-                      src="/image/Products/328433236_561409262681704_1884645422324317963_n.jpg"
+                      src="./image/Products/328433236_561409262681704_1884645422324317963_n.jpg"
                       width="200"
                       alt="ตาข่ายกันนก ชนิด HDPE สีดำ"
                     />
@@ -260,7 +260,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <div class="col"><img src="/image/logo.png"/></div>
+          <div class="col"><img src="./image/logo.png"/></div>
           <div class="col">
             <br>
             <div class="row">
