--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="GenaralBusiness" />
     <meta name="description" content="GBS (GenaralBusiness)" />
     <meta name="robots" content="noindex,nofollow" />
-    <link rel="icon" type="image/x-icon" href="image/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./image/logo.png" />
     <title>GBS</title>
     <link rel="stylesheet" href="./style/index.css" />
     <link
